# monorepo-python

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  setup.sh
.github/workflows/: ci.yml
hooks/: post_gen_project.py
tests/: test_run_cookiecutter.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  LICENSE  README.md  environment.yml  setup.sh
{{cookiecutter.project_slug}}/templates/python/: cookiecutter.json
{{cookiecutter.project_slug}}/templates/python/tests/: test_run_cookiecutter.py
{{cookiecutter.project_slug}}/templates/python/{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/templates/python/{{cookiecutter.project_slug}}/tests/: test_version.py
